fix: nft overflow on transfer page

--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -139,7 +139,8 @@ http://ionicframework.com/docs/theming/ */
   /** custom component  **/
   --ion-text-header: #0b006b;
   --toggle-track: #e8e0eb;
-  --nft-background: #1b1547;
+  --nft-header-background: #1b1547;
+  --nft-background: #eaebf6;
   --chain-icon-background: #0b006b;
   --activity-dim-text: #b0a9b3;
   --activity-list-divider: #d9d9d9;
@@ -272,7 +273,8 @@ body.dark {
   /** custom component  **/
   --ion-text-header: #c297ff;
   --toggle-track: #625b71;
-  --nft-background: #1f1b4d;
+  --nft-header-background: #201b4d;
+  --nft-background: #1b1547;
   --chain-icon-background: #c297ff;
   --activity-dim-text: #958e99;
   --activity-list-divider: #2f2f2f;
